# CMakeProjectTask

./: README.md
CMakeProject/: CMakeLists.txt
CMakeProject/A/: index.h  preparing.py
CMakeProject/B/: CMakeLists.txt  lib.cpp  lib.h
CMakeProject/C/: main.cpp  main.h
